welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:30: error: not found: value faireMotif
faireMotif(Color.red)
^FlowerPot:31: error: not found: value faireMotif
faireMotif(Color.blue)
^FlowerPot:32: error: not found: value faireMotif
faireMotif(Color.green)
^FlowerPot:33: error: not found: value faireMotif
faireMotif(Color.yellow)
^